--- a/alembic.ini
+++ b/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 #sqlalchemy.url = 'postgresql://%(DB_USER)s:%(DB_PASS)s@%(DB_HOST)s:%(DB_PORT)s/%(DB_NAME)s'
-sqlalchemy.url = sqlite:///%(sqlite_filepath)s
+sqlalchemy.url = sqlite:///%(DB_URL)s
 
 
 [post_write_hooks]
