create test_db and settings conftest.py

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ src/Auth/__pycache__/
 src/AdminPanel/__pycache__/
 src/for_test.py
 tasks
+__pycache__/
+test_sqlite_database.db
+tests/__pycache__/conftest.cpython-311-pytest-7.4.0.pyc
+
