--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
-version: '3.7'
+version: '3.10'
 volumes:
   new_database:
+  app_data:
 
 services:
   db:
@@ -10,7 +11,7 @@ services:
     volumes:
       - new_database:/lighthouse/resources:rw
     env_file:
-      - .env-prod
+      - .env
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -23,19 +24,19 @@ services:
     container_name: lighthouse_redis
     restart: always
     volumes:
-      - new_database:/lighthouse/resources:rw
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
     env_file:
-      - .env-prod
-    ports:
-      - 6379:6379
+      - .env
+    command: redis-server /usr/local/etc/redis/redis.conf
 
   lighthouse_app:
-    image: no
     build:
       context: .
     container_name: lighthouse_app
+    volumes:
+      - app_data:/lighthouse/resources:rw
     env_file:
-      - .env-prod
+      - .env
     depends_on:
       - db
       - redis
@@ -44,26 +45,28 @@ services:
       - 9000:8000
 
   celery:
-    image: no
-    build:
+    build: 
       context: .
+      dockerfile: Dockerfile-celery
     container_name: lighthouse_celery
     env_file:
-      - .env-prod
+      - .env
     restart: always
     depends_on:
+      - lighthouse_app
       - redis
     command: ["./scripts/docker_celery.sh", "celery"]
 
   flower:
-    image: no
-    build:
+    build: 
       context: .
+      dockerfile: Dockerfile-celery
     container_name: lighthouse_flower
     env_file:
-      - .env-prod
+      - .env
     restart: always
     depends_on:
+      - lighthouse_app
       - redis
     ports:
       - 5555:5555
